--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 77.0.3", "requests==2.32.5", "matplotlib==3.10.7", "pytest==9.0.0", "python-Levenshtein==0.27.3", "GitPython==3.1.45"]
+requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
@@ -24,6 +24,13 @@ classifiers = [
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
+dependencies = [
+    "requests==2.32.5",
+    "matplotlib==3.10.7",
+    "pytest==9.0.0",
+    "python-Levenshtein==0.27.3",
+    "GitPython==3.1.45"
+]
 
 [project.urls]
 Homepage = "https://github.com/bereis01/gitruck"
