--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "matplotlib==3.10.7",
     "pytest==9.0.0",
     "python-Levenshtein==0.27.3",
-    "GitPython==3.1.45"
+    "GitPython==3.1.45",
+    "numpy==2.3.4"
 ]
 
 [project.urls]
